axyyadigital.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axyyadigital-deployment
  labels:
    app: axyyadigital
spec:                  
  replicas: 1
  selector:
    matchLabels:
      app: axyyadigital
  template:
    metadata:
      labels:
        app: axyyadigital
    spec:
      containers:
      - name: axyyadigital
        image: machendra2612/axyyadigital:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: axyyadigital
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
